RESOLVED FIXED99499
[Qt] REGRESSION(r131485): It broke the build
https://bugs.webkit.org/show_bug.cgi?id=99499
Summary [Qt] REGRESSION(r131485): It broke the build
Csaba Osztrogonác
Reported 2012-10-16 13:46:08 PDT
/home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WTF/wtf/HashTraits.h: In member function ‘GC3Duint WebCore::TextureMapperShaderProgram::getLocation(const WTF::AtomicString&, WebCore::TextureMapperShaderProgram::VariableType)’: /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WTF/wtf/HashTraits.h:76:57: error: ‘location’ may be used uninitialized in this function [-Werror=uninitialized] /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/Source/WebCore/platform/graphics/texmap/TextureMapperShaderManager.cpp:79:14: note: ‘location’ was declared here cc1plus: all warnings being treated as errors
Attachments
Patch for landing (1.49 KB, patch)
2012-10-16 13:56 PDT, Noam Rosenthal
no flags
Noam Rosenthal
Comment 1 2012-10-16 13:56:30 PDT
Created attachment 169017 [details] Patch for landing
WebKit Review Bot
Comment 2 2012-10-16 14:38:10 PDT
Comment on attachment 169017 [details] Patch for landing Rejecting attachment 169017 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: merging Source/WebCore/page/scrolling/ScrollingStateNode.h Failed to merge in the changes. Patch failed at 0001 input[type=range] as a flex item renders thumb at wrong position When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output: http://queues.webkit.org/results/14398282
Noam Rosenthal
Comment 3 2012-10-16 14:41:35 PDT
Comment on attachment 169017 [details] Patch for landing Some cq issue, retrying
WebKit Review Bot
Comment 4 2012-10-16 15:10:01 PDT
Comment on attachment 169017 [details] Patch for landing Clearing flags on attachment: 169017 Committed r131515: <http://trac.webkit.org/changeset/131515>
WebKit Review Bot
Comment 5 2012-10-16 15:10:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.