[Qt] REGRESSION(r131485): It broke the build https://bugs.webkit.org/show_bug.cgi?id=99499

Unreviewed build (warning) fix.


* platform/graphics/texmap/TextureMapperShaderManager.cpp:
(WebCore::TextureMapperShaderProgram::getLocation):


Canonical link: https://commits.webkit.org/117477@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131515 268f45cc-cd09-0410-ab3c-d52691b4dbfc